springboot에 mysql서버를 직접 연동해보았다. (mysql설치, workbench사용해봄)

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -27,4 +27,4 @@ spring:
     open-in-view: false
     show-sql: true
     hibernate:
-      ddl-auto: create #update나 create는 오류생김.
+      ddl-auto: update #한번 create로 실행하고 난 뒤에는 update
