--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -27,4 +27,4 @@ spring:
     open-in-view: false
     show-sql: true
     hibernate:
-      ddl-auto: create #한번 create로 실행하고 난 뒤에는 update
+      ddl-auto: update #한번 create로 실행하고 난 뒤에는 update
