fix: update application profiles and enhance WebSecurityConfig for development

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -7,7 +7,7 @@ spring:
 logging:
   level:
     root: info # 개발 단계에서는 debug 레벨로 설정
-    com.example: debug            # 내 서비스 패키지만 디버깅
+    com.example: debug # 내 서비스 패키지만 디버깅 ((TRACE < DEBUG < INFO < WARN < ERROR))
     org.hibernate.SQL: debug # SQL 쿼리 로그 레벨
     org.hibernate.type.descriptor.sql.BasicBinder: trace # SQL 바인딩 로그 레벨
 
