feat: 파일 저장 로직 리팩토링 및 FileStorageService 구현 #17
- BoardService에서 파일 저장 로직을 FileStorageService 인터페이스로 분리
- LocalFileStorageService와 S3FileStorageService 구현 추가
- 파일 저장 경로를 application.yml 외부 설정으로 관리
- BoardService에서 FileStorageService를 사용하도록 수정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,3 +23,6 @@ spring:
         format_sql: true # SQL 포맷팅
     hibernate:
       ddl-auto: update # create/update
+
+file:
+  upload-dir: C:/dev/IntelliJ/spring-realworld-board/uploads
