--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -1,16 +1,16 @@
+# 테스트 자동화 환경 (JUnit)
+# H2 메모리 DB, JPA create-drop
 # 통합 테스트 등 DB가 필요한 테스트용 : 초기화된 DB, 빠른 실행, 불필요한 로그 생략
-spring:
-  config:
-    activate:
-      on-profile: test
 
+spring:
   datasource:
-    driver-class-name: org.h2.Driver
-    url: jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
-    username: sa
-    password:
+    # 지금은 local과 같은 서버 사용중
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/db_yeon?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+    username: root
+    password: 1234
 
   jpa:
     hibernate:
-      ddl-auto: create-drop  # 테스트 후 자동 삭제
-    show-sql: false # SQL 쿼리 로그 비활성화
+      ddl-auto: create-drop
+    show-sql: false
