--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,15 +1,12 @@
+# 모든 환경에 공통 적용되는 기본값
+# 공통 설정 + active profile 설정
+
 server:
   port: 8000
 
 spring:
   profiles:
-    active: dev # prod : 운영, dev : 로컬, test : 테스트, 미지정 : 기본 설정
-
-  datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/db_yeon?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
-    username: root
-    password: 1234
+    active: local  # 기본값은 local로 설정 (개발자용)
 
   thymeleaf:
     cache: false
@@ -17,12 +14,3 @@ spring:
   jpa:
     database-platform: org.hibernate.dialect.MySQL8Dialect
     open-in-view: false
-    show-sql: true # 디버깅용. Hibernate가 실행하는 SQL 쿼리를 콘솔에 출력
-    properties:
-      hibernate:
-        format_sql: true # SQL 포맷팅
-    hibernate:
-      ddl-auto: update # create/update
-
-file:
-  upload-dir: C:/dev/IntelliJ/spring-realworld-board/uploads
